fixed background overlap image and container text coloor

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ body {
 .container {
     position: relative;
     z-index: 5;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(6, 6, 6, 0.8);
     padding: 20px;
     border-radius: 10px;
 }
